--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "rxjs": "^6.6.3"
+  },
+  "devDependencies": {
     "parcel-bundler": "^1.12.4",
-    "rxjs": "^6.6.3",
-    "typescript": "^4.0.3"
+    "prettier": "^2.1.2",
+    "typescript": "^4.1.0-dev.20201102"
   }
 }
