--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
-    "typescript": "^4.1.0-dev.20201102"
+    "typescript": "^4.1.1-rc"
   }
 }
